<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.newgui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/text_view_0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView0"
                android:text="@string/text_view_1"
                android:textAlignment="center"
                android:layout_toStartOf="@+id/TextViewZ"/>

            <TextView
                android:id="@+id/TextViewZ"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="0"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:text="@string/text_view_2"
                android:textAlignment="center"
                android:layout_toStartOf="@+id/TextViewY"/>

            <TextView
                android:id="@+id/TextViewY"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView1"
                android:text="0"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:text="@string/text_view_3"
                android:textAlignment="center"
                android:layout_toStartOf="@+id/TextViewX"/>

            <TextView
                android:id="@+id/TextViewX"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:text="0"
                android:textAlignment="center"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1">

        <TextView
            android:id="@+id/textViewParameters"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parameters" />

        <TextView
            android:id="@+id/textViewQq"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewParameters"
            android:text="@string/Qq" />

        <TextView
            android:id="@+id/textViewQw"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewQq"
            android:text="@string/Qw" />

        <TextView
            android:id="@+id/textViewRr"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewQw"
            android:text="@string/Rr" />
    </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/buttonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/button_start" />
</RelativeLayout>
